<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="75dp"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_login_agreement_bg">
        <TextView
            android:id="@+id/txt_user_terms_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/color333"
            android:text="@string/txt_user_terms_title"/>
        <TextView
            android:id="@+id/txt_user_terms01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color61281d"
            android:paddingLeft="70dp"
            android:paddingRight="45dp"
            android:textSize="10sp"
            android:paddingTop="5dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/txt_user_terms"/>
        <TextView
            android:id="@+id/txt_user_terms02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color61281d"
            android:paddingLeft="70dp"
            android:paddingRight="45dp"
            android:lineSpacingExtra="3dp"
            android:textSize="10sp"
            android:text="@string/txt_user_terms02"/>
        <TextView
            android:id="@+id/txt_user_terms03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color61281d"
            android:paddingLeft="70dp"
            android:paddingRight="45dp"
            android:lineSpacingExtra="3dp"
            android:textSize="10sp"
            android:text="@string/txt_user_terms03"/>
        <TextView
            android:id="@+id/txt_user_terms04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color61281d"
            android:paddingLeft="70dp"
            android:paddingRight="45dp"
            android:lineSpacingExtra="3dp"
            android:textSize="10sp"
            android:text="@string/txt_user_terms04"/>
        <Button
            android:id="@+id/btn_terms_goon"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_login_agreement_btn"/>
    </LinearLayout>
</LinearLayout>
