<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg_all"
    android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_bg_medium"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_bg_top_vine"/>
        <ImageView
            android:id="@+id/img_self_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="55dp"
            android:onClick="onClick"
            android:src="@drawable/ic_all_back"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phonenum_input"
                android:layout_marginTop="67dp">
                <EditText
                    style="@style/Edit_load_Style01"
                    android:layout_width="0dp"
                    android:layout_weight="40"
                    android:inputType="number"
                    android:hint="@string/hint_user_auto"
                    android:id="@+id/editText_auto" />
                <Button
                    android:id="@+id/button_verify"
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/btn_get_code"
                    android:textSize="12sp"
                    android:textColor="@color/color61281d"
                    android:onClick="onClick"
                    android:padding="0dp"
                    android:background="@drawable/ic_auth_bg" />
            </LinearLayout>
        <EditText
            style="@style/Edit_load_Style"
            android:id="@+id/editText_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:digits="@string/password_imput_rule"
            android:hint="@string/hint_user_password_num" />
        <EditText
            style="@style/Edit_load_Style"
            android:id="@+id/editText_invite_code"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:hint="@string/hint_user_invitecode" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_encoll_waring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/color61281d"
                android:text="@string/txt_waring" />
            <CheckBox
                android:id="@+id/checkbox_encoll_waring"
                android:layout_width="25dp"
                android:layout_height="18dp"
                android:button="@null"
                android:background="@drawable/checkbox_status"
                android:checked="true"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:id="@+id/button_register"
            android:onClick="onClick"
            android:background="@drawable/ic_register_btn"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
