<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg_all"
    android:orientation="horizontal">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_inputpass_bg">
        <RelativeLayout
            android:id="@+id/layout_load_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/img_self_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="25dp"
                android:onClick="onClick"
                android:src="@drawable/ic_all_back"/>
            <TextView
                android:id="@+id/txt_load_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:text=""
                android:textSize="12sp"
                android:visibility="invisible"
                android:textColor="@color/colorc41705"/>
        </RelativeLayout>
        <EditText
            style="@style/Edit_load_Style"
            android:id="@+id/edt_load_password"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/layout_load_error"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="@string/password_imput_rule"
            android:hint="@string/hint_user_password" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edt_load_password"
            android:layout_marginRight="90dp"
            android:gravity="right">
            <TextView
                android:id="@+id/txt_load_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_foget_password"
                android:padding="5dp"
                android:textSize="14sp"
                android:textColor="@color/color61281d"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edt_load_password"
            android:layout_marginTop="17dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_login_btn"/>
    </RelativeLayout>
</LinearLayout>
