<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/ic_bg_all"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_register_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_self_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="50dp"
            android:onClick="onClick"
            android:src="@drawable/ic_all_back"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp">
            <TextView
                android:id="@+id/tv_forget_phono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="手机号："/>
            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_phonenum_input"
            android:layout_marginTop="10dp">
            <EditText
                style="@style/Edit_load_Style01"
                android:layout_width="0dp"
                android:layout_weight="40"
                android:inputType="number"
                android:hint="@string/hint_user_auto"
                android:id="@+id/editText_auto" />
            <Button
                android:id="@+id/button_verify"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/btn_get_code"
                android:textSize="12sp"
                android:textColor="@color/color61281d"
                android:onClick="onClick"
                android:padding="0dp"
                android:background="@drawable/ic_auth_bg" />
        </LinearLayout>
        <EditText
            style="@style/Edit_load_Style"
            android:id="@+id/editText_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/hint_user_password_num" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:id="@+id/button_submit"
            android:onClick="onClick"
            android:background="@drawable/ic_submit_btn"/>
    </LinearLayout>
</LinearLayout>