<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:background="@drawable/ic_register_bg">
        <TextView
            android:id="@+id/tv_fruit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color61281d"
            android:textSize="22sp"
            android:text="@string/txt_modify_garden"/>
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="52dp"
            android:src="@drawable/ic_email_close"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/iv_close"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_garden_name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_bg_input"
                android:paddingLeft="10dp"
                android:textColor="@color/colorecba78"
                android:textColorHint="@color/colorecba78"
                android:textSize="12sp"
                android:textCursorDrawable="@null"
                android:hint="@string/hint_create_name"
                />
            <EditText
                android:id="@+id/edt_garden_note"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/ic_bg_input_multy"
                android:textColor="@color/colorecba78"
                android:textColorHint="@color/colorecba78"
                android:textSize="12sp"
                android:textCursorDrawable="@null"
                android:maxLines="4"
                android:hint="@string/hint_modify_des"
                android:gravity="top"
                android:inputType="textMultiLine"
                />
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_submit_btn"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
